force-app/main/default/objects/Jetson_DR_Settings__c/Jetson_DR_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Jetson DR: defaults values used during Jetson Lead to Tegra Embedded Opportunities</description>
    <label>Jetson DR : Settings</label>
</CustomObject>