force-app/main/default/objects/Jetson_DR_Settings__c/fields/JetsonDR_Lead_Default_Channel_Admin__c.field-meta.xml
<CustomField>
    <fullName>JetsonDR_Lead_Default_Channel_Admin__c</fullName>
    <description>Default Channel Admin for Jetson Deal Reg Lead</description>
    <inlineHelpText>Default Channel Admin for Jetson Deal Reg Lead</inlineHelpText>
    <label>JetsonDR Lead - Default Channel Admin</label>
    <length>18</length>
    <type>Text</type>
</CustomField>