force-app/main/default/objects/Jetson_DR_Settings__c/fields/JetsonDR_Lead_Owner__c.field-meta.xml
<CustomField>
    <fullName>JetsonDR_Lead_Owner__c</fullName>
    <description>All Jetsonson Deal Registration Lead Owners are owned by this user</description>
    <inlineHelpText>All Jetsonson Deal Registration Lead Owners are owned by this user</inlineHelpText>
    <label>JetsonDR Lead - Owner</label>
    <length>18</length>
    <type>Text</type>
</CustomField>