force-app/main/default/objects/Jetson_DR_Settings__c/fields/Lead_Type__c.field-meta.xml
<CustomField>
    <fullName>Lead_Type__c</fullName>
    <defaultValue>&quot;Jetson Deal Registration&quot;</defaultValue>
    <description>Jetson Deal Registration</description>
    <inlineHelpText>Jetson Deal Registration</inlineHelpText>
    <label>Lead Type</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>