force-app/main/default/objects/Jetson_DR_Settings__c/fields/Opportunity_Probability__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Probability__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Defail Probability of Tegra Embedded Opportunity created by Jetson Deal Reg</description>
    <inlineHelpText>Defail Probability of Tegra Embedded Opportunity created by Jetson Deal Reg</inlineHelpText>
    <label>Opportunity : Probability</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>