force-app/main/default/objects/Jetson_DR_Settings__c/fields/Opportunity_RT_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_RT_ID__c</fullName>
    <defaultValue>&quot;012400000005i7mAAA&quot;</defaultValue>
    <description>Record type Id for converted Tegra Embedded Partner Opportunity</description>
    <inlineHelpText>Record type Id for converted Tegra Embedded Partner Opportunity</inlineHelpText>
    <label>Opportunity : RT ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>