force-app/main/default/objects/Jetson_DR_Settings__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <defaultValue>&quot;Prospecting&quot;</defaultValue>
    <description>Default Stage of the Tegra Embedded Opportunity crated from Lead Convert</description>
    <inlineHelpText>Default Stage of the Tegra Embedded Opportunity crated from Lead Convert</inlineHelpText>
    <label>Opportunity : Stage</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>